force-app/main/default/objects/Route__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Describes if the selected route is active or not</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>