force-app/main/default/objects/Route__c/fields/Port_of_Destination__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Port of Destination</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Port</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Routes (Port of Destination)</relationshipLabel>
    <relationshipName>Routes_end</relationshipName>
    <type>Lookup</type>
</CustomField>