force-app/main/default/objects/Route__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Port_of_Destination__c</columns>
    <columns>Port_of_Origin__c</columns>
    <columns>IsActive__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>